--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           username: ${{ secrets.DO_USER }}
           key: ${{ secrets.DO_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.DO_USER }}/LISTENER_BE
+            cd /home/${{ secrets.DO_USER }}/magnify-cash-listener
             git pull origin main
             npm install --production
             pm2 restart all
